--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,5 @@
 .hero {
-    background-image: url('https://via.placeholder.com/1900x500');
+    background-image: url('../img/banner-ppal.jpg');
     background-size: cover;
     background-position: center;
     min-height: 500px;
@@ -138,3 +138,48 @@
 .prefooter img:hover {
     transform: scale(1.05);
 }
+
+
+.hover-zoom {
+    transition: transform 0.3s ease;
+}
+
+.hover-zoom:hover {
+    transform: scale(1.05);
+}
+
+.our-products .card {
+    border: none;
+    border-radius: 15px;
+    overflow: hidden;
+}
+
+.our-products .card-img-top {
+    height: 250px;
+    object-fit: cover;
+}
+
+.our-products .btn-primary {
+    background-color: #007bff;
+    border-color: #007bff;
+    transition: all 0.3s ease;
+}
+
+.our-products .btn-primary:hover {
+    background-color: #0056b3;
+    border-color: #0056b3;
+}
+
+.accordion-button:not(.collapsed) {
+    background-color: #e7f1ff;
+    color: #0c63e4;
+  }
+  
+  .accordion-button:focus {
+    box-shadow: 0 0 0 0.25rem rgba(13, 110, 253, 0.25);
+  }
+  
+  .accordion-button::after {
+    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%230c63e4'%3e%3cpath fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e");
+  }
+  
