--- a/css/styles.css
+++ b/css/styles.css
@@ -194,3 +194,44 @@
         margin-bottom: 0.5rem;
     }
 }
+
+
+.social-sidebar {
+    position: fixed;
+    right: 0;
+    top: 50%;
+    transform: translateY(-50%);
+    z-index: 1000;
+}
+
+.social-sidebar a {
+    display: block;
+    text-align: center;
+    padding: 16px;
+    transition: all 0.3s ease;
+    color: white;
+    font-size: 20px;
+}
+
+.social-sidebar a:hover {
+    background-color: #000;
+}
+
+.facebook {
+    background: #3B5998;
+}
+
+.twitter {
+    background: #55ACEE;
+}
+
+.instagram {
+    background: #125688;
+}
+
+.linkedin {
+    background: #007bb5;
+}
+.whatsapp {
+    background: #25D366;
+}
